DOR - initial commit

--- a/website/04-About-us/docs-of-reference/docs-of-reference.html
+++ b/website/04-About-us/docs-of-reference/docs-of-reference.html
@@ -32,10 +32,11 @@
         <div class="list_accordion">
         	<p class="margin_bottom_20">It identifies the nature and aims of the organisation, its institutional structure and membership, and the composition and competence of its governing bodies. The GC Statute evolved from the Statute of EIUC, the predecessor of the Global Campus, established in 2002 at the initiative of the European Union.</p>
             <p class="margin_bottom_20">In 2017 the organisation revised it in order to reflect the global nature of its composition and governance.</p>
-            <div class="download"><a href="files/eiuc/DOR/Statute%20of%20the%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_EN.pdf" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+            <div class="download"><a href="files/eiuc/DOR/Statute%20of%20the%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_EN.pdf" download="Statute of the Global Campus of Human Rights_23 Feb 2019_EN.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
                 <p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/Statute%20of%20the%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_EN.pdf" download="Statute of the Global Campus of Human Rights_23 Feb 2019_EN.pdf" target="_blank">Download English Version</a></p>
             </div>
-            <div class="download"><a href="files/eiuc/DOR/Statuto%20del%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_%20IT.pdf" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+            <p>[nbsp]</p>
+            <div class="download"><a href="files/eiuc/DOR/Statuto%20del%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_%20IT.pdf" download="Statuto del Global Campus of Human Rights_23 Feb 2019_ IT.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
                 <p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/Statuto%20del%20Global%20Campus%20of%20Human%20Rights_23%20Feb%202019_%20IT.pdf" download="Statuto del Global Campus of Human Rights_23 Feb 2019_ IT.pdf" target="_blank">Download Versione Italiana</a></p>
             </div>
         </div>
@@ -61,3 +62,152 @@
         </div>
     </div>
 </div>
+
+
+<div class="table_accordion_cell" id="charter">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">EMA Venice Charter</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">The so called “Venice Charter” – i.e. the EMA Statute - was signed in 1997 in Venice by the representatives of the ten founding European universities of EMA.  It is one of the first examples of joint degrees in the European academic environment in line with the Bologna process and the reform surrounding the ECTS system.</p>
+        	<p class="margin_bottom_20">It outlines the aim and objectives of the Master’s Programme in promoting a culture of human rights through teaching and training; defines the rights and duties of the member universities and the composition and tasks of its governing bodies (EMA Council, EMA Executive Committee, EMA Academic Curriculum Group, etc.); it defines the programme’s two-semester structure and many other aspects, including the mobility programme, harmonisation of curricula and assessment.</p>
+			<div class="download show"><a href="files/eiuc/DOR/EMA-Venice-Charter.pdf" download="EMA Venice Charter.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EMA-Venice-Charter.pdf" download="EMA Venice Charter.pdf">Download the EMA Venice Charter</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="table_accordion_cell" id="jointdegree">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">EMA Joint Degree Agreement</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">At the initiative of the University of Padua, the coordinator of the EMA programme since 1997, the EMA degree became a true “joint degree”. It is one of the first examples of joint degrees in the European academic environment in line with the Bologna process and the reform surrounding the ECTS system.</p>
+        	<p class="margin_bottom_20">The agreement defines the relationship among the seven universities which jointly grant the EMA Degree – the so-called Inner Circle Universities – and regulates the special role of the University of First Enrolment, i.e. the University of Padua.</p>
+
+			<div class="download show"><a href="files/eiuc/DOR/EMA-Joint-Degree-Agreement.pdf" download="EMA Joint Degree Agreement.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EMA-Joint-Degree-Agreement.pdf" download="EMA Joint Degree Agreement.pdf">Download the EMA Joint Degree Agreement</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="table_accordion_cell" id="law231">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Organisation, Management and Auditing Model pursuant to Legislative Decree 231/2001</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">This document has the following purposes:</p>
+        	<ul style="list-style: decimal;">
+        		<li>It describes the regulations introduced in the Global Campus pursuant to legislation 231/2001, which provides for direct liability of legal entities, companies and associations for certain crimes committed by their representatives.</li>
+				<li>It defines the GC organisational structure </li>
+				<li>It adopts the required “Organisation and Management Model” to ensure the uniformity of management as well as prevent the crimes outlined by the decree, articulated in the following points:
+					<ul class="lista_con_pallini" style="list-style: disc;">
+						<li>Operations and responsibilities of the member universities</li>
+						<li>Definition of the organisation’s scope and activity; laws and methods with which the member universities, the commissions, workgroups and the staff must comply</li>
+						<li>Identification of actions which could create an environment within which crimes could be committed and a description of the procedure for the actions intended to prevent such crimes</li>
+						<li>Establishment of a disciplinary system with penalties for failure to respect the instructions presented in this document</li>
+					</ul>
+				</li>
+        	</ul>
+			<p>[nbsp]</p>
+			<div class="download show"><a href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20GENERAL%20PART_ENG.pdf" download="EIUC MOG_Dlgs231_2001_ GENERAL PART.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20GENERAL%20PART_ENG.pdf" download="EIUC MOG_Dlgs231_2001_ GENERAL PART.pdf">Download English Version</a></p>
+			</div>
+			<p>[nbsp]</p>
+			<div class="download show"><a href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20PARTE%20GENERALE.pdf" download="EIUC MOG_Dlgs231_2001_ PARTE GENERALE.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20PARTE%20GENERALE.pdf" download="EIUC MOG_Dlgs231_2001_ PARTE GENERALE.pdf">Download Versione Italiana</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="table_accordion_cell" id="coe">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Code of Ethics</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">The GC code of ethics was approved to ensure full implementation of the aims, values and principles laid down by the GC Statute by all its stakeholders, including its public and private partners, its scientific and academic community (directors, students, teachers, researchers), its staff (both employees and collaborators, trainees).</p>
+
+			<div class="download show"><a href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_Annex%205_CODE%20OF%20ETHICS_ENG.pdf" download="Code of Ethics.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_Annex%205_CODE%20OF%20ETHICS_ENG.pdf" download="Code of Ethics.pdf">Download English Version</a></p>
+			</div>
+			<p>[nbsp]</p>
+			<div class="download show"><a href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20Allegato%205_CODICE%20ETICO.pdf" download="Codice Etico.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/EIUC%20MOG_Dlgs231_2001_%20Allegato%205_CODICE%20ETICO.pdf" download="Codice Etico.pdf">Download Versione Italiana</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="table_accordion_cell" id="n124">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">In linea con la normativa italiana sui finanziamenti pubblici si pubblica di seguito comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124</p>
+
+			<div class="download show"><a href="files/eiuc/DOR/FinanziamentiPubblici.pdf" download="Comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/FinanziamentiPubblici.pdf" download="Comunicazione ai sensi Art. 1 Commi 125 - 129 Legge 04.08.17 N.124.pdf">Download Versione Italiana</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="table_accordion_cell" id="mouvenice">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">MoU EIUC - City of Venice</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+        	<p class="margin_bottom_20">In 2011 EIUC, the GC predecessor, and the City of Venice signed an MoU aimed at providing a robust grounding for the institution. The MoU confirms the provision of the Monastery of San Nicolò in Venice-Lido as GC premises, including GC responsibility for their management. It also strengthens the cooperation between the City of Venice and GC in the development of joint activities focusing on human rights and democracy.</p>
+
+			<div class="download show"><a href="files/eiuc/DOR/2011_Municipality%20of%20Venice_MoU.pdf" download="MoU EIUC - City of Venice.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+			<p class="titolo_gc_europe"><a class="download" href="files/eiuc/DOR/2011_Municipality%20of%20Venice_MoU.pdf" download="MoU EIUC - City of Venice.pdf">Download the MoU EIUC - City of Venice</a></p>
+			</div>
+        </div>
+    </div>
+</div>
+
+
