HQ staff initial commit (dpts description only)

--- a/website/04-About-us/Staff/Headquarters/headquarters-part1.html
+++ b/website/04-About-us/Staff/Headquarters/headquarters-part1.html
@@ -1,8 +1,41 @@
-<p class="subtitle_page_programme">EIUC / Global Campus Staff</p>
-<p class="margin_bottom_20">The EIUC human resources’ structure presents the specific features of an umbrella/coordinating institution which is not embedded in one specific university, but operates as general secretariat providing services to all its “decentralized” partners.</p>
-<p class="margin_bottom_20">To do so EIUC’s staff:</p>
-<ul class="lista_con_pallini margin_bottom_20">
-<li>Services the Global Campus, for which the Centre functions as hub and administrative coordinator.</li>
-<li>Operates as an academic and research centre providing premises, academic structures, project management and financial services to the Master’s Programme in Human Rights and Democratisation (EMA / Global Campus Europe) as well as to the additional educational, training and research activities, which enrich its portfolio.</li>
-</ul>
-<p>The EIUC staff is organised in 6 departments, with the EIUC Secretary General as the apical position (supported by a Personal Secretary), and with the Administrative Director acting as intermediate management position between the Secretary General and the Heads of Department. One department reports directly to the Secretary General (Academic / EMA Department), while the other six departments (Global Campus, Projects, Finances, Fundraising /PR/Communication, Premises and Technical Services, and General Services) report via the Administrative Manager.</p>
+<p class="subtitle_page_programme">Headquarters Staff</p>
+<p class="margin_bottom_20">The HQ presents the specific features of an umbrella organisation which operates as a general secretariat and administrative coordinator of its member universities. The headquarter staff provides these partners with financial, logistic, communication, research and outreach assistance.</p>
+<p class="margin_bottom_20">The HQ also functions as an administrative, academic and research centre for the Master’s Programme in Human Rights and Democratisation (EMA / Global Campus Europe). Finally, it delivers project management and financial services for additional educational and training activities that take place in Venice and online.</p>
+
+
+<p class="subtitle_page_programme">Secretariat</p>
+<p class="margin_bottom_20">The senior management is comprised of the Secretary General, who is responsible for leading and managing the Global Campus, and the Administrative and Academic Directors, who ensure effective implementation and coordination of programmes and activities under his supervision. The Secretary General is assisted by a personal assistant.</p>
+
+
+<p class="subtitle_page_programme">Global Activities Department</p>
+<p class="margin_bottom_20">We coordinate the implementation of joint activities that are the result of the collaboration of the GC seven regional programmes, including the Global Classroom, the International Conference on Human Rights and Democratisation, the Global Internship Programme, the Global Campus Human Rights Journal and publication of the best-awarded theses. We also support capacity building projects such as the EU-project for the creation of the Human Rights Centre at the National University of Timor-Leste in cooperation with <span class="titolo_gc_asia_pacific">GC Asia-Pacific</span>.</p>
+
+
+<p class="subtitle_page_programme">E-learning Department</p>
+<p class="margin_bottom_20">We create and manage all distance-learning activities, including Massive Open Online Courses (MOOCs), specialised online courses and e-learning partnerships with key stakeholders. We also support and coordinate efforts in all GC Regional Programmes to complement on-site activities with online components (blended teaching).</p>
+
+<p class="subtitle_page_programme">Research Department</p>
+<p class="margin_bottom_20">The aim of the department is to develop research-based knowledge and activities contributing to the implementation of projects undertaken both at the Global Campus Headquarters and its regional hubs in cooperation with participating universities.</p>
+
+
+<p class="subtitle_page_programme">Children’s Rights Department</p>
+<p class="margin_bottom_20">Together with the children’s rights regional officers across our network, we work closely with the Right Livelihood Foundation (RLF) in order to promote and protect the rights of children worldwide through research, education and advocacy projects. This includes the follow-up initiation activities under the umbrella of the UN Global Study on Children Deprived of Liberty. We further cooperate with the European Centre for Constitutional and Human Rights in order to strategically defend the rights of children.</p>
+
+
+<p class="subtitle_page_programme">Project Department</p>
+<p class="margin_bottom_20">We manage all educational and training projects implemented in Venice, including the Venice School of Human Rights, the Training Seminars Series (on International Electoral Observation and ECHR jurisprudence), the Cinema, Human Rights and Advocacy Summer School, and other educational and training events organised by the GC.</p>
+
+
+<p class="subtitle_page_programme">Finance Department</p>
+<p class="margin_bottom_20">We supervise Global Campus finances and liaise with GC partners in implementing the budget of the action grant. We monitor expenditure progress, supervise accounting practices by GC partners and HQ, take care of budgeting and financial reporting, prepare for audits and manage daily book-keeping, payments and other administrative tasks.</p>
+
+
+<p class="subtitle_page_programme">Communication/PR/Fundraising Department</p>
+<p class="margin_bottom_20">We support all communication efforts of the Global Campus. We act as the institution's press office by providing social media services, taking care of PR and visibility actions for GC activities and coordinating in-house graphics and merchandising. We also manage fundraising activities through the development of project proposals that reflect the programmatic focus of the Global Campus.</p>
+
+<p class="subtitle_page_programme">General Services Department</p>
+<p class="margin_bottom_20">We take care of the organisation of travel, accommodation, catering services and local transportation for all Global Campus activities and events held in Venice.  We also support travel and in some cases accommodation for most of the global activities managed by the HQ. We purchase any goods and services necessary for the daily activities of the headquarters staff.</p>
+
+
+<p class="subtitle_page_programme">Premises, IT and Web Marketing Department</p>
+<p class="margin_bottom_20">We ensure that the Global Campus headquarters, located in the Monastery of San Nicolò, is fully functioning in terms of safety compliance, routine maintenance, IT services, compliance with privacy provisions, inventory management and provision of reception and protocol services. We support the Secretary General in liaising with the City of Venice which provides the premises. We are also responsible for web development and web advertising for all HQ and global activities.</p>
