--- a/website/04-About-us/Staff/Headquarters/01-secretariat.html
+++ b/website/04-About-us/Staff/Headquarters/01-secretariat.html
@@ -1,5 +1,111 @@
-<div class="programma_gc gc_europe">{{file::eiuc/icona_gceurope.php}}
-<h4 class="titolo_programma titolo_gc_europe"><a href="{{link_url::110}}">GC Europe</a></h4>
-<p class="testo_programma">By involving 42 universities and experts from all 27 EU member states, NGOs and IGOs, EMA has become instrumental in facilitating cooperation on human rights and democracy in Europe (and beyond).</p>
-<div class="freccia_dx"><a href="{{link_url::110}}">{{file::eiuc/freccia_dx.php}}</a></div>
+<p class="subtitle_page_programme">Secretariat</p>
+<p class="margin_bottom_20">The senior management is comprised of the Secretary General, who is responsible for leading and managing the Global Campus, and the Administrative and Academic Directors, who ensure effective implementation and coordination of programmes and activities under his supervision. The Secretary General is assisted by a personal assistant.</p>
+<div class="table_accordion">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manfred_Nowak_global_campus_eiuc.jpg" alt="Manfred Nowak - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Secretary General</p>
+            <p class="subtitle_page_programme margin_bottom_20">Manfred Nowak</p>
+            <p class="margin_bottom_20">Manfred Nowak was appointed Secretary General in January 2016. He is primarily responsible for the well-functioning and well-being of EIUC as an institution under Italian law and all its activities in the framework of the Global Campus of Human Rights, including seven Master programmes in different world regions and various other education, training and research programmes and projects.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">In order to carry out the function of Secretary General successfully, he cooperates and interacts with a great number of different stakeholders: He is the head of some 30 staff of EIUC in the Monastery of San Nicolò at the Lido in Venice, he is responsible for the preparation and implementation of decisions of the governing bodies of EIUC (Assembly and Board of Administrators under the leadership of Dzidek Kedzia as President of EIUC), he cooperates with the coordinating universities of the Global Campus under the chair of Veronica Gomez, the EIUC Advisory Board and with the students of the various Master Programmes and more than 3,000 graduates who are represented by the Global Campus Alumni Associations.</p>
+                <p class="margin_bottom_20">In addition, he interacts with various institutions of the European Union, which is the main source of funding for EIUC/Global Campus, above all the Commission (DEVCO), the Parliament, the External Action Service (EEAS) and the Council Working Group COHOM, with other international organizations (e.g. UN, UNESCO, Council of Europe, OSCE), non-governmental organizations and development agencies (e.g. GIZ).</p>
+                <p class="margin_bottom_20">Manfred Nowak has a long history with the pioneering programme of the Global Campus, the European Master in Human Rights and Democratisation (EMA): He was teaching already in the first programme in 1997, then representing the University of Vienna and acting as Austrian National Director until his appointment as Secretary General. He also served as Chair of EMA between the years 2000 and 2007. He was among the founders of EIUC in 2002 and also taught in other Master programmes of the Global Council, such as in Africa and South East Europe. His vision for the next years is to broaden the Global Campus network of currently 100 universities, to further integrate the various components of the Global Campus and to transform EIUC/Global Campus from a European-centred to a truly global institution with an effective global governance structure. At the same time, he wishes to further develop the seat of EIUC and the Global Campus in Venice, and the relationship with local partners with a special focus on the interaction between the arts and human rights. Most importantly, he feels that in a time of multiple economic, financial, climate and other global crises, which undermine the basic universal values of peace, democracy, global justice, human rights and the rule of law, academics have a particular responsibility to speak out and to strengthen human rights education at every level of human learning in order to foster a universal culture of human rights.</p>
+                <p class="margin_bottom_20">In addition to his function as Secretary General of EIUC/Global Campus, Manfred Nowak still has a part-time Professorship of International Human Rights at the University of Vienna (where he is head of the Vienna Master of Arts in Human Rights and two human rights research centres). Moreover, in October 2016 he was appointed as UN Expert to lead the Global Study on Children Deprived of Liberty, a function he carries out in close cooperation with EIUC and the Global Campus participating universities as well as with the Ludwig Boltzmann Institute of Human Rights, which he founded in 1992 in Vienna.</p>
+                <p class="margin_bottom_20">Aside from Vienna University, Manfred Nowak was Professor of International Law and Human Rights at various prestigious universities, such as Utrecht, Lund, Stanford and the Graduate Institute in Geneva and has published more than 600 books and articles in this field, including various language editions of the CCPR-Commentary, a CAT-Commentary and an Introduction to the International Human Rights Regime. His latest books deal with the human rights as an answer to growing economic inequality (Menschenrechte - Eine Antwort auf die wachsende ökonomische Ungleichheit, Konturen Hamburg 2016) and with the limits of privatization from a human rights perspective (Human Rights or Global Capitalism, Pennsylvania Press 2017).</p>
+                <p class="margin_bottom_20">In the past, Manfred Nowak also carried out various expert functions for the UN, the Council of Europe, the EU and other inter-governmental and non-governmental organizations. Most importantly, he served for many years in various functions as UN Expert on Enforced Disappearances (1993 to 2006), as one of eight international judges in the Human Rights Chamber for Bosnia and Herzegovina in Sarajevo (1996 to 2003), and as UN Special Rapporteur on Torture (2004 to 2010).</p>
+                <div class="download"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="">CV Download</a></p>
+                </div>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@eiuc.org">manfred.nowak@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 347 6263102">+39 347 6263102</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Elisabetta_Noli_global_campus_eiuc.jpg" alt="Elisabetta Noli - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Administrative Director</p>
+            <p class="subtitle_page_programme margin_bottom_20">Elisabetta Noli</p>
+            <p class="margin_bottom_20">Elisabetta’s primary function is to oversee the work of the HQ administrative departments: premises, IT and web marketing services, finance, general services and communication/PR/fundraising. She also supervises the project department that is in charge of organising training seminars, summer schools and conferences in Venice. </p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Elisabetta monitors the implementation of GC activities, authorises expenditures and advises the Secretary General and GC Governing bodies on institutional issues, human resources and partnerships. </p>
+                <p class="margin_bottom_20">She holds a post-graduate Diploma in Human Rights Protection Techniques from the University of Padua and has been serving the GC since its inception as a project manager. She has also been actively involved in advocacy work with Amnesty International, Antigone and other Italian CSOs. </p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:elisabetta.noli@gchumanrights.org">elisabetta.noli@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 935">+39 041 2720 935</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Elisabetta_Noli_global_campus_eiuc.jpg" alt="Elena Battaglia - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Administrative Director</p>
+            <p class="subtitle_page_programme margin_bottom_20">George Ulrich</p>
+            <p class="margin_bottom_20">Elisabetta’s primary function is to oversee the work of the HQ administrative departments: premises, IT and web marketing services, finance, general services and communication/PR/fundraising. She also supervises the project department that is in charge of organising training seminars, summer schools and conferences in Venice. </p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Elisabetta monitors the implementation of GC activities, authorises expenditures and advises the Secretary General and GC Governing bodies on institutional issues, human resources and partnerships. </p>
+                <p class="margin_bottom_20">She holds a post-graduate Diploma in Human Rights Protection Techniques from the University of Padua and has been serving the GC since its inception as a project manager. She has also been actively involved in advocacy work with Amnesty International, Antigone and other Italian CSOs. </p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:elisabetta.noli@gchumanrights.org">elisabetta.noli@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 935">+39 041 2720 935</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Anna_Steiner_global_campus_eiuc.jpg" alt="Anna Zenz - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Personal Assistant to the EIUC Secretary General</p>
+            <p class="subtitle_page_programme margin_bottom_20">Anna Steiner</p>
+            <p class="margin_bottom_20">The Personal Assistant supports the Secretary General by managing his agenda of appointments and events, organising missions, carrying out background research and producing documents, reports, presentations and briefing papers.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Together with the Administrative Director she is responsible for the organisation of meetings of the EIUC governing bodies and of other meetings, conferences and events. She maintains the liaison - upon the SG's instructions - with relevant partner institutions and stakeholders.</p>
+                <p class="margin_bottom_20">Prior to joining EIUC in 2019, Anna was worked as a human rights officer at the Austrian Ministry of Europe, Integration and Foreign Affairs, and previously interned at the UN Office of the High Commissioner for Human Rights in Geneva, the London office of Reprieve as well as the Ludwig Boltzmann Institute of Human Rights in Vienna. She holds a BA degree in English and American Studies from the University of Vienna as well as an MA in Human Rights from the University of Vienna Postgraduate Centre.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:anna.steiner@eiuc.org">anna.steiner@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 934">+39 041 2720 934</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!--<div class="text_read_more"><br>
+<p class="margin_bottom_20">The Projects department is composed by:</p>
+<p class="margin_bottom_20">Alberta Rocca<br> Email: <a class="titolo_gc_europe" href="mailto:alberta.rocca@eiuc.org">alberta.rocca@eiuc.org </a><br>Project Manager / Head of Department</p>
+<p class="margin_bottom_20">Elena Battaglia<br> Email: <a class="titolo_gc_europe" href="mailto:elena.battaglia@eiuc.org">elena.battaglia@eiuc.org</a><br>Project Officer</p>
+<p class="margin_bottom_20">Serena Caterino<br> Email: <a class="titolo_gc_europe" href="mailto:serena.caterino@eiuc.org">serena.caterino@eiuc.org</a><br>Project Officer</p>
+</div>
+<div class="accordion accordion_gc_arab read_more">
+<div class="icon_e_title_accordion">
+<div class="piu_accordion">
+<div class="verticale">[nbsp]</div>
+<div class="orizzontale">[nbsp]</div>
+</div>
+<p class="title_accordion more_less">Read More</p>
+</div>
+</div>-->
+<p>[nbsp]</p>
