noli+ulrich+steinman

--- a/website/04-About-us/Staff/Headquarters/01-secretariat.html
+++ b/website/04-About-us/Staff/Headquarters/01-secretariat.html
@@ -50,15 +50,21 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Elisabetta_Noli_global_campus_eiuc.jpg" alt="Elena Battaglia - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/george_ulrich.jpg" alt="George Ulrich - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Administrative Director</p>
+            <p class="ruolo_persona titolo_gc_europe">Academic Director</p>
             <p class="subtitle_page_programme margin_bottom_20">George Ulrich</p>
-            <p class="margin_bottom_20">Elisabetta’s primary function is to oversee the work of the HQ administrative departments: premises, IT and web marketing services, finance, general services and communication/PR/fundraising. She also supervises the project department that is in charge of organising training seminars, summer schools and conferences in Venice. </p>
+            <p class="margin_bottom_20">Prof. George Ulrich has worked for the Global Campus in a variety of capacities. He served as GC Europe / EMA Programme Director from 2016-2019, as Secretary General of EIUC (the predecessor of the Global Campus) from 2003-2009, and as Academic Coordinator / Programme Director of EMA from 2001- 2004. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Elisabetta monitors the implementation of GC activities, authorises expenditures and advises the Secretary General and GC Governing bodies on institutional issues, human resources and partnerships. </p>
-                <p class="margin_bottom_20">She holds a post-graduate Diploma in Human Rights Protection Techniques from the University of Padua and has been serving the GC since its inception as a project manager. She has also been actively involved in advocacy work with Amnesty International, Antigone and other Italian CSOs. </p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:elisabetta.noli@gchumanrights.org">elisabetta.noli@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 935">+39 041 2720 935</a></p>
+                <p class="margin_bottom_20">In between these appointments, he held the position of Rector and Professor of Human Rights at the Riga Graduate School of Law from 2009-2016.</p>
+                <p class="margin_bottom_20">George obtained his Ph.D. as well as an M.A. in Philosophy from the University of Toronto, Canada, and holds the degree of Cand. Mag. in Social Anthropology and History of Ideas from Aarhus University, Denmark.</p>
+                <p class="margin_bottom_20">Among his main research interests are issues related to the history and philosophy of human rights, human rights diplomacy, human rights and development cooperation, health and human rights, international medical ethics, and ethics for human rights professionals.</p>
+                <p class="margin_bottom_20">He is one of the joint editors of a Global Campus publication on music and human rights. A key focus of his teaching is to equip students to effectively engage with expressions of human rights scepticism.</p>
+                 <div class="download"><a href="files/eiuc/staff/GU-Selected-Publications.pdf" download="George Ulrich - Selected Publications.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/GU-Selected-Publications.pdf" download="George Ulrich - Selected Publications.pdf">Selected Publications Download</a></p>
+                </div>
+                <p>&nbsp;</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:george.ulrich@gchumanrights.org">george.ulrich@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 937">+39 041 2720 937</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -71,15 +77,16 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Anna_Steiner_global_campus_eiuc.jpg" alt="Anna Zenz - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Imke_Steimann_global_campus.jpg" alt="Imke Steimann - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Personal Assistant to the EIUC Secretary General</p>
-            <p class="subtitle_page_programme margin_bottom_20">Anna Steiner</p>
-            <p class="margin_bottom_20">The Personal Assistant supports the Secretary General by managing his agenda of appointments and events, organising missions, carrying out background research and producing documents, reports, presentations and briefing papers.</p>
+            <p class="ruolo_persona titolo_gc_europe">Personal Assistant to the Secretary General</p>
+            <p class="subtitle_page_programme margin_bottom_20">Imke Steimann</p>
+            <p class="margin_bottom_20">Imke supports the Secretary General by managing his agenda of appointments and events, organising missions, conferences and events, carrying out background research and producing documents, reports, presentations and briefing papers. She also maintains the liaison with relevant partner institutions and stakeholders. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Together with the Administrative Director she is responsible for the organisation of meetings of the EIUC governing bodies and of other meetings, conferences and events. She maintains the liaison - upon the SG's instructions - with relevant partner institutions and stakeholders.</p>
-                <p class="margin_bottom_20">Prior to joining EIUC in 2019, Anna was worked as a human rights officer at the Austrian Ministry of Europe, Integration and Foreign Affairs, and previously interned at the UN Office of the High Commissioner for Human Rights in Geneva, the London office of Reprieve as well as the Ludwig Boltzmann Institute of Human Rights in Vienna. She holds a BA degree in English and American Studies from the University of Vienna as well as an MA in Human Rights from the University of Vienna Postgraduate Centre.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:anna.steiner@eiuc.org">anna.steiner@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 934">+39 041 2720 934</a></p>
+                <p class="margin_bottom_20">Prior to joining the Global Campus in 2020, Imke worked as Project Assistant at the Munich Security Conference. </p>
+                <p class="margin_bottom_20">Before, she interned at the German Mission to the United Nations in New York and the London-based NGO Child Soldiers International.</p>
+                <p class="margin_bottom_20">Imke graduated from a Human Rights Master’s Programme at the University of Vienna where she focused on children’s rights and armed conflict. She also holds a BA degree in Liberal Arts and Sciences with a major in Governance from the University in Freiburg, and spent an exchange year in Canada. </p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:imke.steimann@gchumanrights.org ">imke.steimann@gchumanrights.org </a><br>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 934">+39 041 2720 934</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -93,19 +100,3 @@
         </div>
     </div>
 </div>
-<!--<div class="text_read_more"><br>
-<p class="margin_bottom_20">The Projects department is composed by:</p>
-<p class="margin_bottom_20">Alberta Rocca<br> Email: <a class="titolo_gc_europe" href="mailto:alberta.rocca@eiuc.org">alberta.rocca@eiuc.org </a><br>Project Manager / Head of Department</p>
-<p class="margin_bottom_20">Elena Battaglia<br> Email: <a class="titolo_gc_europe" href="mailto:elena.battaglia@eiuc.org">elena.battaglia@eiuc.org</a><br>Project Officer</p>
-<p class="margin_bottom_20">Serena Caterino<br> Email: <a class="titolo_gc_europe" href="mailto:serena.caterino@eiuc.org">serena.caterino@eiuc.org</a><br>Project Officer</p>
-</div>
-<div class="accordion accordion_gc_arab read_more">
-<div class="icon_e_title_accordion">
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-<p class="title_accordion more_less">Read More</p>
-</div>
-</div>-->
-<p>[nbsp]</p>
