--- a/website/04-About-us/Staff/Headquarters/02-global-activities.html
+++ b/website/04-About-us/Staff/Headquarters/02-global-activities.html
@@ -74,7 +74,12 @@
             <div class="text_read_more">
                 <p class="margin_bottom_20">In the course of ten years spent in Southeast Europe and later Asia-Pacific, he has developed a distinctive mix of academic and managerial skills and gained a diversified and progressively responsible professional experience.</p>
                 <p class="margin_bottom_20">Since 2019 Adriano has led an EU-funded capacity building project aimed at establishing the <a href="{{link_url::478}}" class="titolo_gc_asia_pacific">Human Rights Centre of the National University of Timor-Leste (UNTL)</a>.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 77488176</a></p>
+                <p class="margin_bottom_20">Previously he worked as Academic Tutor and subsequently Coordinator of the <a href="{{link_url::111}}" class="titolo_gc_south_east_europe">GC South East Europe/ERMA</a> on behalf of the Institute for Central-Eastern and Balkan Europe/University of Bologna (IECOB).</p>
+                <p class="margin_bottom_20"> As IECOB research fellow in regional studies he also lectured internationally, published, organised scientific conferences and participated in panels as speaker. Since 2014 he has been president of the alumni association of the MA in Eastern European Studies of the University of Bologna.</p>
+                <p>Linkedin Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
+                Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
+                Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
+                Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 77488176</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -88,19 +93,3 @@
         </div>
     </div>
 </div>
-<!--<div class="text_read_more"><br>
-<p class="margin_bottom_20">The Global Campus department is composed by:</p>
-<p class="margin_bottom_20">Valentina Abita<br> Email: <a class="titolo_gc_europe" href="mailto:valentina.abita@gchumanrights.org">valentina.abita@gchumanrights.org</a><br>Global Campus Project Manager / Head of Department</p>
-<p class="margin_bottom_20">Giacomo Ottonello<br> Email: <a class="titolo_gc_europe" href="mailto:giacomo.ottonello@gchumanrights.org">giacomo.ottonello@gchumanrights.org</a><br>Global Campus Project Officer</p>
-<p class="margin_bottom_20">And avails itself of the collaboration of:</p>
-<p class="margin_bottom_20">Angela Melchiorre<br> Email: <a class="titolo_gc_europe" href="mailto:angela.melchiorre@gchumanrights.org">angela.melchiorre@gchumanrights.org</a><br>Academic Coordinator of Online Programmes</p>
-</div>
-<div class="accordion accordion_gc_arab read_more">
-<div class="icon_e_title_accordion">
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-<p class="title_accordion more_less">Read More</p>
-</div>
-</div>-->
