--- a/website/04-About-us/Staff/Headquarters/02-global-activities.html
+++ b/website/04-About-us/Staff/Headquarters/02-global-activities.html
@@ -79,7 +79,7 @@
                 <p>Linkedin Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
                 Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
                 Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
-                Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 77488176</a></p>
+                Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
